# terminal_timing

./: .gitignore  README.md  WARP.md  market_phase_final.py  market_phase_score.py  netlify.toml  phase_score_analysis.py  run-tests
.bmad-core/: install-manifest.yaml
.bmad-core/agents/: bmad-orchestrator.md
.bmad-core/tasks/: brownfield-migration.md  party-mode.md
.github/workflows/: pipeline-daily.yml
docs/: access-control.md  architecture.md  notion-embedding-guide.md  prd.md  release-notes.md
docs/epics/: epic-1-timing-terminal-pipeline.md
docs/prd/: 01-executive-summary.md  02-project-classification.md  03-success-criteria.md  04-product-scope.md  05-user-journeys.md  executive-summary.md  index.md  (+9 more)
pipeline/: .gitignore  pyproject.toml
pipeline/data/: lsd_history.csv
pipeline/tests/integration/: test_cli_chart_data.py
pipeline/tests/unit/: test_lsd_history.py  test_models.py  test_phase_score.py  test_quality.py  test_zones.py
pipeline/timing_terminal/: cli.py  config.py  history.py  models.py  quality.py
pipeline/timing_terminal/data_providers/fixtures/: README.md  partial_example.json  stale_example.json
pipeline/timing_terminal/providers/: __init__.py  chartinspect.py  inmemory.py
pipeline/timing_terminal/scoring/: __init__.py  lsd.py  phase_score.py  zones.py
pipeline/timing_terminal_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plots/: market_phase_score.csv  phase_series.json
scripts/: notion_add_embed.py  notion_sync_chart_embeds.py
web/: chart-data.json  index.html  main.js
(+20 files in other folders)
