[project]
name = "timing-terminal-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
description = "Timing Terminal daily batch pipeline for Bitcoin phase scoring"
readme = "../README.md"

# Core runtime dependencies
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.0",
  "pytest>=8.0.0",
]

[project.scripts]
"timing-terminal-pipeline" = "timing_terminal.cli:main"

